# acpi-lib

./: CMakeLists.txt  README.md  REFERENCES.md
demo/: CMakeLists.txt
demo/acpi_demo/: main.cpp
include/pfs/: acpi.hpp
src/: acpi_linux.cpp  acpi_none.cpp  acpi_win32.cpp
